--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.chatFragment">
+    tools:context=".fragments.messageListFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,7 +59,8 @@
                     android:layout_height="match_parent"
                     android:layout_marginBottom="4dp"
                     android:background="@color/backgroundGray"
-                    android:nestedScrollingEnabled="false" />
+                    android:nestedScrollingEnabled="false"
+                    tools:listitem="@layout/message_item"/>
             </LinearLayout>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -77,6 +78,7 @@
                 android:layout_weight="10"
                 android:background="@color/topBackground"
                 android:hint="Сообщение"
+                android:textColorHint="@color/white"
                 android:inputType="textCapSentences"
                 android:padding="14dp"
                 android:textColor="@color/white" />
