--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -40,7 +40,6 @@
         android:lines="1"
         android:text="Превью сообщения"
         android:maxLines="2"
-       
         android:textColor="@color/messageGrayText"
         app:layout_constraintBottom_toBottomOf="@id/avatarImage"
         app:layout_constraintEnd_toStartOf="@id/barrier"
@@ -93,10 +92,8 @@
         android:id="@+id/delimiterView"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginStart="8dp"
         android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/avatarImage" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
