--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.messageListFragment">
@@ -45,14 +45,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/backgroundGray"
-                android:orientation="vertical">
-
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/messageRecycleView"
                     android:layout_width="match_parent"
@@ -60,14 +52,12 @@
                     android:layout_marginBottom="4dp"
                     android:background="@color/backgroundGray"
                     android:nestedScrollingEnabled="false"
-                    tools:listitem="@layout/message_item"/>
-            </LinearLayout>
+                    tools:listitem="@layout/message_item" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:elevation="5dp"
             android:orientation="horizontal">
 
@@ -78,23 +68,25 @@
                 android:layout_weight="10"
                 android:background="@color/topBackground"
                 android:hint="Сообщение"
-                android:textColorHint="@color/white"
                 android:inputType="textCapSentences"
                 android:padding="14dp"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textColorHint="@color/white" />
 
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@color/topBackground"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:background="@color/topBackground">
 
                 <ImageButton
                     android:id="@+id/sendMessageImageButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|bottom"
-                    android:layout_marginBottom="5dp" />
+                    android:layout_marginBottom="12dp"
+                    android:background="@color/topBackground"
+                    android:src="@drawable/send_btn" />
             </FrameLayout>
         </LinearLayout>
     </LinearLayout>
